--- a/src/Components/portfolio/Projects.scss
+++ b/src/Components/portfolio/Projects.scss
@@ -98,5 +98,15 @@
 
 
 
+@media only screen and (max-width:500px) {
+  .project-icon-container {
+    .project-title {
+      
+      height: 30%;
+      
+      
+    }
+  }
 
+}
 
