--- a/src/Components/aboutMe/AboutMe.css
+++ b/src/Components/aboutMe/AboutMe.css
@@ -54,6 +54,7 @@
   margin-left: 3vw;
   padding: 0;
   font-size: 1.8vmin;
+  font-weight: bold;
 }
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills {
@@ -113,10 +114,22 @@
   width: 27vw;
 }
 
-.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.java .progressbar-title .percent .value-1 {
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.java .progressbar-title .percent .value {
   height: 100%;
-  width: 85%;
+  width: 1%;
   background-color: #27ae60;
+  -webkit-transition: width 2s linear;
+  transition: width 2s linear;
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.java .progressbar-title .percent .value.animated {
+  width: 85%;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.java .progressbar-title .percent .value:hover {
+  background-color: gold;
 }
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.js {
@@ -148,16 +161,22 @@
   width: 27vw;
 }
 
-.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.js .progressbar-title .percent .value-1 {
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.js .progressbar-title .percent .value {
   height: 100%;
   width: 1%;
   background-color: #27ae60;
   -webkit-transition: width 2s linear;
   transition: width 2s linear;
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
 }
 
-.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.js .progressbar-title .percent .value-1.animated {
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.js .progressbar-title .percent .value.animated {
   width: 90%;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.js .progressbar-title .percent .value:hover {
+  background-color: gold;
 }
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.python {
@@ -189,10 +208,22 @@
   width: 27vw;
 }
 
-.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.python .progressbar-title .percent .value-1 {
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.python .progressbar-title .percent .value {
   height: 100%;
-  width: 70%;
+  width: 1%;
   background-color: #27ae60;
+  -webkit-transition: width 2s linear;
+  transition: width 2s linear;
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.python .progressbar-title .percent .value.animated {
+  width: 80%;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.python .progressbar-title .percent .value:hover {
+  background-color: gold;
 }
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.html {
@@ -224,10 +255,22 @@
   width: 27vw;
 }
 
-.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.html .progressbar-title .percent .value-1 {
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.html .progressbar-title .percent .value {
   height: 100%;
-  width: 70%;
+  width: 1%;
   background-color: #27ae60;
+  -webkit-transition: width 2s linear;
+  transition: width 2s linear;
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.html .progressbar-title .percent .value.animated {
+  width: 90%;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.html .progressbar-title .percent .value:hover {
+  background-color: gold;
 }
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.css {
@@ -259,10 +302,22 @@
   width: 27vw;
 }
 
-.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.css .progressbar-title .percent .value-1 {
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.css .progressbar-title .percent .value {
   height: 100%;
-  width: 70%;
+  width: 1%;
   background-color: #27ae60;
+  -webkit-transition: width 2s linear;
+  transition: width 2s linear;
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.css .progressbar-title .percent .value.animated {
+  width: 85%;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.css .progressbar-title .percent .value:hover {
+  background-color: gold;
 }
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.php {
@@ -294,10 +349,22 @@
   width: 27vw;
 }
 
-.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.php .progressbar-title .percent .value-1 {
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.php .progressbar-title .percent .value {
   height: 100%;
-  width: 70%;
+  width: 1%;
   background-color: #27ae60;
+  -webkit-transition: width 2s linear;
+  transition: width 2s linear;
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.php .progressbar-title .percent .value.animated {
+  width: 70%;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.php .progressbar-title .percent .value:hover {
+  background-color: gold;
 }
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-holder {
@@ -397,6 +464,7 @@
 
 .aboutme-container .aboutme-content-conatiner .aboutme-right .aboutme-folder-container .folder-cap {
   font-size: 1.5vmin;
+  font-weight: bold;
   margin: -10% auto 0 auto;
 }
 
@@ -415,8 +483,16 @@
           box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
 }
 
+.aboutme-container .aboutme-content-conatiner .aboutme-right .aboutme-folder-container .aboutme-download-button a {
+  color: black;
+  text-decoration: none;
+}
+
 .aboutme-container .aboutme-content-conatiner .aboutme-right .aboutme-folder-container .aboutme-download-button:hover {
   background-color: var(--primary-color);
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-right .aboutme-folder-container .aboutme-download-button:hover a {
   color: white;
 }
 
@@ -496,27 +572,31 @@
     background-size: 120%;
   }
   .aboutme-container .aboutme-header {
-    margin: 10vw 1vw;
+    margin: 5vh 1vw 1vh 1vw;
     font-size: 11vmin;
   }
   .aboutme-container .aboutme-content-conatiner {
     display: -ms-grid;
     display: grid;
     width: 100vw;
-    height: 75vh;
-    -ms-grid-columns: 90vw;
-        grid-template-columns: 90vw;
+    height: 80vh;
+    -ms-grid-columns: 100vw;
+        grid-template-columns: 100vw;
+    -ms-grid-rows: 90% 10%;
+        grid-template-rows: 90% 10%;
     row-gap: 0;
     -webkit-column-gap: 0;
             column-gap: 0;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-left {
-    -ms-grid-columns: 110%;
-        grid-template-columns: 110%;
-    -ms-grid-rows: 40% 60%;
-        grid-template-rows: 40% 60%;
+    height: 60vh;
+    width: 95vw;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+    -ms-grid-rows: 25% 75%;
+        grid-template-rows: 25% 75%;
     grid-column-gap: 1vw;
     grid-row-gap: 1vw;
     margin: auto;
@@ -529,8 +609,8 @@
     display: none;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-summary {
-    font-size: calc(1.2vh + .05vw);
-    height: calc(375px - 30vw);
+    font-size: calc(4px + 1.2vh + .05vw);
+    height: calc(500px - 30vw);
     width: 100%;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-right {
@@ -538,7 +618,7 @@
     bottom: calc(85.5px + 16vh);
     right: -45vw;
     width: 55vw;
-    height: 42vh;
+    height: 39vh;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-right .aboutme-folder-container {
     height: calc(220px - 15vw);
