--- a/src/Components/portfolio/Portfolio.css
+++ b/src/Components/portfolio/Portfolio.css
@@ -101,17 +101,25 @@
 
 .portfolio-container .portfolio-content-container .portfolio-right .site-des-container {
   margin-top: 5%;
-  padding: 1vw;
+  padding: 0vh 10px 1vh 10px;
   height: 30%;
   border: solid black 3px;
+  background-color: black;
+  -webkit-box-shadow: 10px 30px 25px 30px black;
+          box-shadow: 10px 30px 25px 30px black;
+  overflow-y: scroll;
 }
 
 .portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-description-header {
   font-size: calc(10.69px + .8vw);
+  color: var(--primary-color);
 }
 
 .portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-details {
   font-size: calc(14px + .2vmax);
+  letter-spacing: .05em;
+  line-height: 1.5em;
+  color: white;
 }
 
 @media only screen and (max-width: 1249px) {
@@ -144,7 +152,7 @@
   }
   .portfolio-container .portfolio-content-container .portfolio-left .project-list-container {
     width: 100%;
-    height: 80%;
+    height: 100%;
     margin: 1% 3%;
     padding-top: 1vh;
   }
@@ -153,13 +161,14 @@
     list-style: none;
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 48.5% 48.5%;
-        grid-template-columns: 48.5% 48.5%;
+    -ms-grid-columns: 45% 45% 45% 45%;
+        grid-template-columns: 45% 45% 45% 45%;
     -ms-grid-rows: 100%;
         grid-template-rows: 100%;
     grid-column-gap: 1.3vw;
     height: 100%;
     width: 94%;
+    overflow-x: scroll;
   }
   .portfolio-container .portfolio-content-container .portfolio-left .contact-me-cta {
     display: none;
@@ -169,6 +178,7 @@
     height: auto;
     width: calc(20% + 1vmin);
     float: right;
+    display: none;
   }
   .portfolio-container .portfolio-content-container .portfolio-right {
     display: -webkit-box;
@@ -180,7 +190,7 @@
             flex-direction: column;
     padding: 0px 0px;
     margin: 0px 0px;
-    height: 75%;
+    height: 70%;
     width: 100%;
   }
   .portfolio-container .portfolio-content-container .portfolio-right .portfolio-preview-container {
@@ -203,21 +213,37 @@
     margin: 0%;
     height: 100%;
   }
+  .portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-description-header {
+    font-size: calc(20px - 0.1vh - .1vw);
+  }
   .portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-details {
-    font-size: calc(1.2vh + .5vw);
+    font-size: calc(17px - 0.1vh - .1vw);
   }
 }
 
 @media only screen and (max-width: 500px) {
   .portfolio-container .portfolio-header {
-    margin: 8vw 0vw;
+    margin: 3vw 0vw 0vh 0vw;
     font-size: 11vmin;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right {
+    height: 80%;
   }
   .portfolio-container .portfolio-content-container .portfolio-right .portfolio-preview-container {
     height: 50%;
   }
   .portfolio-container .portfolio-content-container .portfolio-right .portfolio-preview-container .preview-image {
     height: 100%;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .site-des-container {
+    margin: 0%;
+    height: 100%;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-description-header {
+    font-size: calc(17px - 0.1vh - .1vw);
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-details {
+    font-size: calc(14px - 0.1vh - .1vw);
   }
 }
 /*# sourceMappingURL=Portfolio.css.map */
