--- a/src/Components/portfolio/Portfolio.scss
+++ b/src/Components/portfolio/Portfolio.scss
@@ -105,17 +105,23 @@
 
             .site-des-container {
                 margin-top: 5%;
-                padding:1vw;
+                padding:0vh 10px 1vh 10px;
                 height: 30%;
                 border: solid black 3px;
-
+                background-color: black;
+                box-shadow: 10px 30px 25px 30px black;
+                overflow-y: scroll;
                 .portfolio-site-description-header {
                     font-size: calc(10.69px + .8vw);
+                    color: var(--primary-color);
                 }
 
                 .portfolio-site-details {
                     font-size: calc(14px + .2vmax);
-
+                    // font-weight: bold;
+                    letter-spacing: .05em;
+                    line-height: 1.5em;
+                    color: white;
                 }
                 
             }
@@ -169,7 +175,7 @@
 
                 .project-list-container {
                     width: 100%;
-                    height: 80%;
+                    height: 100%;
                     margin: 1% 3%;
                     padding-top: 1vh;
 
@@ -177,12 +183,13 @@
                         font-size: 1vw;
                         list-style: none;
                         display: grid;
-                        grid-template-columns: 48.5% 48.5%;
+                        grid-template-columns: 45% 45% 45% 45%;
                         grid-template-rows: 100%;
                         grid-column-gap: 1.3vw;
                         // grid-row-gap: .5vw;
                         height: 100%;
                         width: 94%;
+                        overflow-x: scroll;
 
                     }
                 }
@@ -196,6 +203,7 @@
                     height: auto;
                     width: calc(20% + 1vmin);
                     float: right;
+                    display: none;
                 }
 
 
@@ -206,7 +214,7 @@
                 flex-direction: column;
                 padding: 0px 0px;
                 margin: 0px 0px;
-                height: 75%;
+                height: 70%;
                 width: 100%;
                 // background-color: aqua;
                 
@@ -230,9 +238,12 @@
                 .site-des-container {
                     margin: 0%;
                     height: 100%;
+                    .portfolio-site-description-header {
+                        font-size: calc(20px - 0.1vh - .1vw);
+                    }
                     
                     .portfolio-site-details {
-                        font-size: calc(1.2vh + .5vw);
+                        font-size: calc(17px - 0.1vh - .1vw);
                     }
 
                 }
@@ -258,7 +269,7 @@
 
 
         .portfolio-header {
-            margin: 8vw 0vw;
+            margin: 3vw 0vw 0vh 0vw;
             font-size: 11vmin;
         }
 
@@ -266,6 +277,7 @@
         .portfolio-content-container {
 
             .portfolio-right {
+                height: 80%;
                 .portfolio-preview-container{
                     height: 50%;
                     .preview-image {
@@ -273,6 +285,19 @@
                     }
 
                 }
+                .site-des-container {
+                    margin: 0%;
+                    height: 100%;
+                    .portfolio-site-description-header {
+                        font-size: calc(17px - 0.1vh - .1vw);
+                    }
+                    
+                    .portfolio-site-details {
+                        font-size: calc(14px - 0.1vh - .1vw);
+                    }
+
+                }
+
             }
 
 
