--- a/src/Components/portfolio/Projects.css
+++ b/src/Components/portfolio/Projects.css
@@ -123,4 +123,10 @@
   background-image: linear-gradient(175deg, rgba(255, 0, 0, 0) 55%, var(--primary-color) 30%);
   opacity: 100%;
 }
+
+@media only screen and (max-width: 500px) {
+  .project-icon-container .project-title {
+    height: 30%;
+  }
+}
 /*# sourceMappingURL=Projects.css.map */
