--- a/src/Components/portfolio/Projects.css
+++ b/src/Components/portfolio/Projects.css
@@ -102,7 +102,7 @@
   }
 }
 
-.selected {
+.project-icon-container.selected {
   -webkit-box-shadow: 0px 0px 40px 10px var(--primary-color);
           box-shadow: 0px 0px 40px 10px var(--primary-color);
   -webkit-animation-name: project-title-icon-change;
@@ -113,15 +113,8 @@
           animation-timing-function: linear;
 }
 
-.selected .project-title-overlay {
-  -webkit-animation-name: project-title-overlay-change;
-          animation-name: project-title-overlay-change;
-  -webkit-animation-duration: .5s;
-          animation-duration: .5s;
-  -webkit-animation-timing-function: ease;
-          animation-timing-function: ease;
-  background-image: linear-gradient(175deg, rgba(255, 0, 0, 0) 55%, var(--primary-color) 30%);
-  opacity: 100%;
+.project-icon-container.selected .project-title {
+  color: var(--primary-color);
 }
 
 @media only screen and (max-width: 500px) {
