--- a/src/Components/portfolio/Projects.scss
+++ b/src/Components/portfolio/Projects.scss
@@ -78,19 +78,23 @@
 }
 
 
-.selected {
+.project-icon-container.selected {
       // background-color: aqua;
       box-shadow: 0px 0px 40px 10px var(--primary-color);
       animation-name: project-title-icon-change;
       animation-duration: .5s;
       animation-timing-function: linear;
 
-      .project-title-overlay {
-        animation-name: project-title-overlay-change;
-        animation-duration: .5s;
-        animation-timing-function: ease;
-        background-image: linear-gradient(175deg, rgba(255,0,0,0) 55%, var(--primary-color) 30%);
-        opacity: 100%;
+      // .project-title-overlay {
+      //   animation-name: project-title-overlay-change;
+      //   animation-duration: .5s;
+      //   animation-timing-function: ease;
+      //   background-image: linear-gradient(175deg, rgba(255,0,0,0) 55%, var(--primary-color) 30%);
+      //   opacity: 100%;
+      // }
+
+      .project-title {
+        color: var(--primary-color);
       }
 
 
