Fix for some Resize Error and Reload Lock

--- a/src/Components/aboutMe/AboutMe.css
+++ b/src/Components/aboutMe/AboutMe.css
@@ -511,14 +511,16 @@
     display: -ms-grid;
     display: grid;
     width: 100vw;
-    height: 75vh;
+    height: 90vh;
     -ms-grid-columns: 90vw;
         grid-template-columns: 90vw;
-    -ms-grid-rows: 75% 25%;
-        grid-template-rows: 75% 25%;
+    -ms-grid-rows: 90% 10%;
+        grid-template-rows: 90% 10%;
+    grid-row-gap: 0;
     row-gap: 0;
     -webkit-column-gap: 0;
-            column-gap: 0;
+    grid-column-gap: 0;
+    column-gap: 0;
     padding: 0;
     margin: 0;
   }
@@ -531,6 +533,7 @@
     grid-row-gap: 1vw;
     margin: auto;
     padding: 0;
+    height: 100%;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills {
     display: none;
@@ -540,7 +543,7 @@
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-summary {
     font-size: calc(1.2vh + .5vw);
-    height: calc(500px - 18.5vw);
+    /* height: calc(500px - 18.5vw); */
     width: 100%;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-right {
@@ -548,7 +551,7 @@
     bottom: calc(23.5px + 16vw);
     right: -45vw;
     width: 52vw;
-    height: 50vh;
+    height: 22vh;
   }
   .aboutme-container .aboutme-content-conatiner .aboutme-right .aboutme-folder-container {
     display: -webkit-box;
