--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -310,13 +310,13 @@
         .heroContent {
             display: grid;
             grid-template-columns: 100% ;
-            grid-template-rows: 70% 30%;
+            grid-template-rows: 60% 30%;
             grid-column-gap: 0;
             grid-row-gap: 0;
 
             .hero-left {
 
-                height: 70vh;
+                height: 60vh;
                 width: 100%;
                 border-right:0px;
                 // background-color: red;
@@ -369,13 +369,15 @@
                 .hero-right-button-container {
                     height: 100%;
                     width: 100%;
+                    margin-top: 5%;
+                    justify-content: revert;
                     
                     .cta-hero-right {
                         font-size: 3.5vmin;
                     }
 
                     .cta-hero-right-subtext {
-                        font-size: 2vmin;
+                        font-size: calc(25px - 0.1vh - .1vw);
                     }
 
                 }
@@ -394,7 +396,7 @@
  }
 
 
-@media only screen and (max-width: 412px) {
+@media only screen and (max-width: 500px) {
 
     .hero-container {
         width: 100vw ;       
@@ -408,13 +410,13 @@
         .heroContent {
             display: grid;
             grid-template-columns: 100% ;
-            grid-template-rows: 70% 30%;
+            grid-template-rows: 60% 40%;
             grid-column-gap: 0;
             grid-row-gap: 0;
 
             .hero-left {
 
-                height: 70vh;
+                height: 60vh;
                 width: 100%;
                 border-right:0px;
                 // background-color: red;
@@ -467,13 +469,13 @@
                 .hero-right-button-container {
                     height: 100%;
                     width: 100%;
-                    
+                    justify-content: revert;
                     .cta-hero-right {
                         font-size: 3.5vw;
                     }
 
                     .cta-hero-right-subtext {
-                        font-size: 5vw;
+                        font-size: calc(18px - 0.1vh - .1vw);
                     }
 
                 }
