--- a/src/Components/portfolio/Portfolio.css
+++ b/src/Components/portfolio/Portfolio.css
@@ -195,7 +195,7 @@
   }
   .portfolio-container .portfolio-content-container .portfolio-right .portfolio-preview-container {
     margin: 0px 0px;
-    height: 70%;
+    height: 50%;
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -218,6 +218,9 @@
   }
   .portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-details {
     font-size: calc(17px - 0.1vh - .1vw);
+  }
+  .portfolio-container .portfolio-content-container .portfolio-left {
+    height: 18%;
   }
 }
 
