--- a/src/Components/portfolio/Portfolio.scss
+++ b/src/Components/portfolio/Portfolio.scss
@@ -220,7 +220,7 @@
                 
                 .portfolio-preview-container {
                     margin: 0px 0px;
-                    height: 70%;
+                    height: 50%;
                     width: 100%;
                     display: flex;
                     justify-content: center;
@@ -248,6 +248,10 @@
 
                 }
 
+            }
+
+            .portfolio-left {
+                height: 18%;
             }
 
 
