--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -50,18 +50,17 @@
 
 
           .contact-form-top {
-
+            font-size: calc(24px - 0.1vh - .1vw);
             background-color: rgba(128, 128, 128, 0.498);
             width: 60%;
             height: 70%;
             margin: 5vh auto 0 auto;
             border: black 3px solid;
             padding: 1%;
-            font-size: calc(14px + .2vmax);
+            // font-size: calc(14px + .2vmax);
             .name-input {
               width: 100%;
               height: 10%;
-              font-size: calc(27px + .2vmax);
               margin: 5% auto;
             }
             .email-input {
@@ -173,7 +172,7 @@
               margin: 0px auto;
               width: calc(403px + 6vmax);
               height: 85%;
-
+              
               
             }
 
@@ -223,6 +222,7 @@
           form{
             .contact-form-top{
               width: 100%;
+              font-size: calc(16px - 0.1vh - .1vw);
             }
             .contact-form-bottom{
               input {
