--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -62,6 +62,7 @@
               width: 100%;
               height: 10%;
               margin: 5% auto;
+              font-size: calc(27px + .2vmax);
             }
             .email-input {
               height: 10%;
