--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -11,6 +11,7 @@
 
 .contact-container {
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     //background-color: yellow;
     min-height: 750px;
     font-family: Michroma;
@@ -55,6 +56,7 @@
             width: 60%;
             height: 70%;
             margin: 5vh auto 0 auto;
+            margin: calc(var(--vh, 1vh) * 5) auto 0 auto;
             border: black 3px solid;
             padding: 1%;
             // font-size: calc(14px + .2vmax);
@@ -94,6 +96,7 @@
               margin: 2% 35% 0 35%;
               width: 30%;
               height: 6vh;
+              height: calc(var(--vh, 1vh) * 6);
               font-family: Michroma;
               font-weight: 500;
               font-size: calc(14px + .2vmax);
@@ -142,6 +145,7 @@
 
     .contact-header {
       margin: 0 auto 8vh 3vw;
+      margin: 0 auto calc(var(--vh, 1vh) * 8) 3vw;
       font-size: 9vmin;
 
     }
@@ -185,6 +189,7 @@
                 
                 display: block;
                 margin: 1vh auto;
+                margin: calc(var(--vh, 1vh) * 1) auto;
                 width: calc(403px + 6vmax);
                 
               }
@@ -214,6 +219,7 @@
   .contact-container {
       .contact-header {
         margin: 0 auto 8vh 3vw;
+        margin: 0 auto calc(var(--vh, 1vh) * 8) 3vw;
         font-size: 12vmin;
       }
     .contact-content-container {
