--- a/src/Components/portfolio/Portfolio.css
+++ b/src/Components/portfolio/Portfolio.css
@@ -9,6 +9,7 @@
 
 .portfolio-container {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   font-family: Michroma;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -102,6 +103,7 @@
 .portfolio-container .portfolio-content-container .portfolio-right .site-des-container {
   margin-top: 5%;
   padding: 0vh 10px 1vh 10px;
+  padding: 0vh 10px calc(var(--vh, 1vh) * 1) 10px;
   height: 30%;
   border: solid black 3px;
   background-color: black;
@@ -127,6 +129,7 @@
     background-image: none !important;
     width: 100vw;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     overflow: visible;
   }
   .portfolio-container .portfolio-header {
@@ -155,6 +158,7 @@
     height: 100%;
     margin: 1% 3%;
     padding-top: 1vh;
+    padding-top: calc(var(--vh, 1vh) * 1);
   }
   .portfolio-container .portfolio-content-container .portfolio-left .project-list-container ul {
     font-size: 1vw;
