--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 .app-footer {
   background-color: black;
   height: 20vh;
+  height: calc(var(--vh, 1vh) * 20);
 }
 
 .app-footer .menu-container {
