--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -18,6 +18,7 @@
   z-index: 1;
   width: calc(85px + 1vw);
   height: 10vh;
+  height: calc(var(--vh, 1vh) * 10);
 }
 
 .navbar-container.isClosed .nav-icon-closed {
@@ -51,6 +52,7 @@
   z-index: 1;
   width: 45vw;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   background-color: black;
 }
 
@@ -79,7 +81,9 @@
 .navbar-container.isOpen .drawer {
   position: absolute;
   margin: 25vh 10% auto 10%;
+  margin: calc(var(--vh, 1vh) * 25) 10% auto 10%;
   height: 70%;
+  height: calc(var(--vh, 1vh) * 70);
   text-align: center;
   width: 80%;
   display: block;
