--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -23,6 +23,7 @@ $font-family: 'Michroma';
     z-index: 1;
     width: calc(85px + 1vw);
     height: 10vh;
+    height: calc(var(--vh, 1vh) * 10);
     // background-color: red;
     
 
@@ -57,6 +58,7 @@ $font-family: 'Michroma';
     z-index: 1;
     width: 45vw;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     background-color: black;
     
 
@@ -86,7 +88,9 @@ $font-family: 'Michroma';
     .drawer {
         position: absolute;
         margin: 25vh 10% auto 10%;
+        margin: calc(var(--vh, 1vh) * 25) 10% auto 10%;
         height: 70%;
+        height: calc(var(--vh, 1vh) * 70);
         text-align: center;
         width: 80%;
         // background-color: green;
