--- a/src/Components/aboutMe/AboutMe.scss
+++ b/src/Components/aboutMe/AboutMe.scss
@@ -14,6 +14,7 @@ $delay: .5s;
 
 .aboutme-container {
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     // min-height: 760px;
     background-color: rgba(103, 186, 67, 0.384);
     font-family: Michroma;
@@ -44,6 +45,8 @@ $delay: .5s;
         display: grid;
         grid-template-columns: 80vw 20vw;
         grid-template-rows: 75vh;
+        grid-template-rows: calc(var(--vh, 1vh) * 75);
+        
         padding: 0;
         margin: 0;
         
@@ -93,6 +96,7 @@ $delay: .5s;
                     left: 5%;
                     position: absolute;
                     margin-bottom: -3vh;
+                    margin-bottom: calc(var(--vh, 1vh) * -3);
 
                     .aboutme-listitem.java {
                         width: 35vw;
@@ -518,6 +522,7 @@ $delay: .5s;
 
                     width:90%;
                     height: 12vh;
+                    height: calc(var(--vh, 1vh) * 12);
                     a {
                         color: black;
                         text-decoration: none;
@@ -572,6 +577,7 @@ $delay: .5s;
                 display: grid;
                 width: 100vw;
                 height: 90vh;
+                height: calc(var(--vh, 1vh) * 90);
                 grid-template-columns: 90vw;
                 grid-template-rows: 90% 10%;
                 grid-row-gap: 0;
@@ -619,6 +625,7 @@ $delay: .5s;
                     right: -45vw;
                     width: 52vw;
                     height: 22vh;
+                    height: calc(var(--vh, 1vh) * 22);
 
                     .aboutme-folder-container {
                         display: flex;
@@ -627,6 +634,7 @@ $delay: .5s;
 
                         .aboutme-foldericon {
                             margin: 2vh -5vh 1vh auto;
+                            margin: calc(var(--vh, 1vh) * 2) -5vw calc(var(--vh, 1vh) * 1) auto;
                             
                         }
                         .folder-cap {
