--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -2,6 +2,7 @@
 
 .hero-container {
      height: 100vh;
+     height: calc(var(--vh, 1vh) * 100);
     //  min-height: 750px;
      border: 5px solid black; 
      color: var(--primary-color);
@@ -193,6 +194,7 @@
 
             .hero-right {
                 height: 94.5vh;
+                height: calc(var(--vh, 1vh) * 94.5);
                 // min-height: 691px;
                 width: 38.2vw;
                 display: flex;
@@ -328,7 +330,7 @@
                         width: 80%;
                         
                         font-size: 25vmin;
-                        margin: 15vh auto 4vw auto;
+                        margin: calc(var(--vh, 1vh) * 15) auto 4vw auto;
                     }
 
                     .hero-subheading {
@@ -428,7 +430,7 @@
                         width: 80%;
                         
                         font-size: calc(125px - 1vw);
-                        margin: 15vh auto 4vw auto;
+                        margin: calc(var(--vh, 1vh) * 15) auto 4vw auto;
                     }
 
                     .hero-subheading {
