--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -13,7 +13,7 @@
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     //background-color: yellow;
-    min-height: 750px;
+    //min-height: 750px;
     font-family: Michroma;
     
 
