--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -69,6 +69,7 @@
             .hero-left {
                 // background-color: aqua;
                 height: 94.5vh;
+                height: calc(var(--vh, 1vh) * 94.5);
                 // min-height: 700px;
                 //max-height: 705px;
                 width: 60vw;
@@ -83,6 +84,7 @@
                     
                     .hero-name {
                         margin: 15vh 0 8vh 0;
+                        margin: calc(var(--vh, 1vh) * 15) 0 calc(var(--vh, 1vh) * 8) 0;
                         padding: 0;
                         font-family: subway-new-york-sc, sans-serif;
                         font-weight: 400;
@@ -176,6 +178,7 @@
                         max-width: 200px;
                         max-height:200px;
                         margin: -4vh auto;
+                        margin: calc(var(--vh, 1vh) * -4) auto;
                     }
                     .vercel-img {
                     //    min-height: 205px;
@@ -184,6 +187,7 @@
                         max-height:205px;
                         max-width: 308px;
                         margin: -4vh auto;
+                        margin: calc(var(--vh, 1vh) * -4) auto;
                         padding: 0;
                     }
                 }
@@ -319,6 +323,7 @@
             .hero-left {
 
                 height: 60vh;
+                height: calc(var(--vh, 1vh) * 60);
                 width: 100%;
                 border-right:0px;
                 // background-color: red;
@@ -419,6 +424,7 @@
             .hero-left {
 
                 height: 60vh;
+                height: calc(var(--vh, 1vh) * 60);
                 width: 100%;
                 border-right:0px;
                 // background-color: red;
