--- a/src/Components/aboutMe/AboutMe.css
+++ b/src/Components/aboutMe/AboutMe.css
@@ -25,7 +25,7 @@
   margin: auto auto auto 3vw;
   padding: 0;
   color: white;
-  font-size: 5.5em;
+  font-size: calc(var(--vh, 1vh) * 10);
   font-weight: normal;
   letter-spacing: .1em;
   text-shadow: 1vmin 1vmin rgba(0, 0, 0, 0.137);
@@ -82,11 +82,16 @@
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list {
   list-style: none;
-  top: 25%;
+  top: 30%;
   left: 5%;
   position: absolute;
   margin-bottom: -3vh;
   margin-bottom: calc(var(--vh, 1vh) * -3);
+  height: 70%;
+}
+
+.aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list li {
+  height: 14%;
 }
 
 .aboutme-container .aboutme-content-conatiner .aboutme-left .aboutme-skills .aboutme-languages-list .aboutme-listitem.java {
