--- a/src/Components/aboutMe/AboutMe.scss
+++ b/src/Components/aboutMe/AboutMe.scss
@@ -33,7 +33,8 @@ $delay: .5s;
         margin: auto auto auto 3vw;
         padding: 0;
         color: white;
-        font-size: 5.5em;
+        // font-size: 5.5em
+        font-size: calc(var(--vh, 1vh) * 10);
         font-weight: normal;
         letter-spacing: .1em;
         text-shadow:1vmin 1vmin rgba(0, 0, 0, 0.137);
@@ -92,11 +93,17 @@ $delay: .5s;
 
                 .aboutme-languages-list{
                     list-style: none;
-                    top: 25%;
+                    top: 30%;
                     left: 5%;
                     position: absolute;
                     margin-bottom: -3vh;
                     margin-bottom: calc(var(--vh, 1vh) * -3);
+                    //background-color: #27ae60;
+                    height: 70%;
+
+                    li {
+                        height: 14%;
+                    }
 
                     .aboutme-listitem.java {
                         width: 35vw;
