--- a/src/Components/aboutMe/AboutMe.scss
+++ b/src/Components/aboutMe/AboutMe.scss
@@ -741,7 +741,7 @@ $delay: .5s;
                     height: calc(220px - 15vw);
 
                     .aboutme-foldericon {
-                        margin: auto auto 2vh auto;
+                        margin: auto 1vw 2vh auto;
                         size: 50%;
                     }
 
